# clion.projects

./: fix_build.sh
binder/: CMakeLists.txt
binder/hwservicemanager-arm64-android/: CMakeLists.txt
binder/libbinder-arm64-android/: CMakeLists.txt
binder/libhidlbase-arm64-android/: CMakeLists.txt
binder/libhidltransport-arm64-android/: CMakeLists.txt
binder/libhwbinder-arm64-android/: CMakeLists.txt
binder/servicemanager-arm64-android/: CMakeLists.txt
binder/vndservicemanager-arm64-android/: CMakeLists.txt
input/: CMakeLists.txt
input/libandroid_runtime-arm64-android/: CMakeLists.txt
input/libinput-arm64-android/: CMakeLists.txt
input/libinputflinger-arm64-android/: CMakeLists.txt
input/libinputservice-arm64-android/: CMakeLists.txt
input/libservices.core-arm64-android/: CMakeLists.txt
