cmake_minimum_required(VERSION 3.6)

add_subdirectory(libhwbinder-arm64-android)
add_subdirectory(libhidltransport-arm64-android)
add_subdirectory(libhidlbase-arm64-android)
add_subdirectory(hwservicemanager-arm64-android)
#add_subdirectory(libbinder-arm64-android)
#add_subdirectory(servicemanager-arm64-android)
add_subdirectory(vndservicemanager-arm64-android)